--- a/package.json
+++ b/package.json
@@ -10,11 +10,31 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "bootstrap": "^4.6.0",
+    "eslint-plugin-node": "^11.1.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-grid-gallery": "^0.5.5",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
+  },
+  "devDependencies": {
+    "node-sass": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "3.3.0",
+    "@typescript-eslint/parser": "3.3.0",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-config-recommended": "latest",
+    "eslint-config-standard-with-typescript": "18.0.2",
+    "eslint-plugin-import": "2.21.2",
+    "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-standard": "4.0.1",
+    "prettier": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
