--- a/.eslintrc
+++ b/.eslintrc
@@ -35,7 +35,8 @@
     "@typescript-eslint/consistent-type-definitions": ["error", "type"],
     "@typescript-eslint/space-before-function-paren": ["warn", "never"],
     "@typescript-eslint/no-unused-vars": "warn",
-    "@typescript-eslint/strict-boolean-expressions": "off"
+    "@typescript-eslint/strict-boolean-expressions": "off",
+    "@typescript-eslint/naming-convention": "off"
   },
   "settings": {
     "import/resolver": {
