--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.18",
     "bootstrap": "^4.6.0",
     "eslint-plugin-node": "^11.1.0",
     "react": "^17.0.2",
@@ -17,15 +19,16 @@
     "react-dom": "^17.0.2",
     "react-grid-gallery": "^0.5.5",
     "react-helmet": "^6.1.0",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
-    "node-sass": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "3.3.0",
     "@typescript-eslint/parser": "3.3.0",
+    "cors-anywhere": "^0.4.4",
     "eslint": "^7.20.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-config-recommended": "latest",
@@ -34,6 +37,7 @@
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "4.0.1",
+    "node-sass": "^5.0.0",
     "prettier": "^2.2.1"
   },
   "scripts": {
