--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
-    "@synonymdev/blocktank-client": "^0.0.8",
+    "@synonymdev/blocktank-client": "^0.0.14",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.18",
+    "bip21": "^2.0.3",
     "bootstrap": "^4.6.0",
     "eslint-plugin-node": "^11.1.0",
     "react": "^17.0.2",
