--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-node": "^11.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-grid-gallery": "^0.5.5",
     "react-helmet": "^6.1.0",
