--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-redux": "^7.1.18",
     "bip21": "^2.0.3",
     "bootstrap": "^4.6.0",
+    "debounce": "^1.2.1",
     "eslint-plugin-node": "^11.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
