--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.18",
     "bip21": "^2.0.3",
+    "bitcoin-units": "^0.3.0",
     "bootstrap": "^5.1.3",
     "debounce": "^1.2.1",
     "eslint-plugin-node": "^11.1.0",
