--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.1.3",
     "debounce": "^1.2.1",
     "eslint-plugin-node": "^11.1.0",
+    "javascript-time-ago": "^2.3.13",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-copy-to-clipboard": "^5.0.4",
