--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^17.0.2",
     "react-grid-gallery": "^0.5.5",
     "react-helmet": "^6.1.0",
+    "react-number-format": "^4.9.1",
     "react-qr-code": "^2.0.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
